--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "scripts": {
     "start": "electron .",
     "test": "electron test.js",
-    "vs": "electron vs.js"
+    "vs": "electron vs.js",
+    "pkg": "electron-packager . --version 1.4.1"
   },
   "devDependencies": {
-    "electron-prebuilt": "",
+    "electron-packager": "^8.1.0",
+    "electron-prebuilt": "1.4.1",
     "electron-reload": "^1.0.0"
   },
   "dependencies": {
