--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"start": "electron .",
 		"test": "electron test.js",
 		"vs": "electron vs.js",
-		"pkg": "electron-packager . --version 1.4.1 --overwrite --out=../releases"
+		"pkg": "electron-packager . --version 1.4.1 --overwrite --out=../releases --icon=pump.icns"
 	},
 	"devDependencies": {
 		"electron-packager": "^8.1.0",
