--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "psat",
+	"name": "PSAT",
 	"version": "0.0.0",
 	"description": "Pumping System Assessment Tool",
 	"homepage": "https://github.com/ORNL-AMO/PSAT#psat",
