--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-	"name": "PSAT",
-	"version": "1.0.0",
-	"description": "Pumping System Assessment Tool",
-	"homepage": "https://github.com/ORNL-AMO/PSAT#psat",
-	"license": "MIT",
-	"repository": "ORNL-AMO/PSAT",
-	"bugs": {
-		"url": "https://github.com/ORNL-AMO/PSAT/issues"
-	},
-	"keywords": [
-		"electron",
-		"ornl",
-		"psat"
-	],
-	"scripts": {
-		"start": "electron .",
-		"test": "electron test.js",
-		"vs": "electron vs.js",
-		"pkg": "electron-packager . --version 1.4.1 --overwrite --out=../releases --icon=pump"
-	},
-	"devDependencies": {
-		"electron-packager": "^8.1.0",
-		"electron-prebuilt": "1.4.1",
-		"electron-reload": "^1.0.0"
-	},
-	"dependencies": {
-		"jquery": ""
-	}
+  "name": "PSAT",
+  "version": "1.0.0",
+  "description": "Pumping System Assessment Tool",
+  "homepage": "https://github.com/ORNL-AMO/PSAT#psat",
+  "license": "MIT",
+  "repository": "ORNL-AMO/PSAT",
+  "bugs": {
+    "url": "https://github.com/ORNL-AMO/PSAT/issues"
+  },
+  "keywords": [
+    "electron",
+    "ornl",
+    "psat"
+  ],
+  "scripts": {
+    "start": "electron .",
+    "test": "electron test.js",
+    "vs": "electron vs.js",
+    "pkg": "electron-packager . --version 1.4.1 --overwrite --out=../releases --icon=pump"
+  },
+  "devDependencies": {
+    "electron-packager": "^8.1.0",
+    "electron-prebuilt": "1.4.1",
+    "electron-reload": "^1.0.0",
+    "electron-winstaller": "^2.5.1"
+  },
+  "dependencies": {
+    "jquery": ""
+  }
 }
