--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
 		"start": "electron .",
 		"test": "electron test.js",
 		"vs": "electron vs.js",
-		"pkg": "electron-packager . --version 1.4.1 --overwrite --out=../releases --icon=pump"
+		"pkg": "electron-packager . --electron-version 1.5.0 --overwrite --out=../releases --icon=pump"
 	},
 	"devDependencies": {
-		"electron-packager": "^8.1.0",
-		"electron-prebuilt": "1.4.1"
+		"electron-packager": "^8.5.1",
+		"electron": "1.5.0"
 	},
 	"dependencies": {
 		"jquery": ""
